# invalid-action-masking

./: .gitignore  .python-version  LICENSE  README.MD  README.md  build.sh  docker.py  docker.sh  mask.sh  ppo.py  pyproject.toml  requirements.txt  sharedmemory.Dockerfile
gym_vec_api/: ppo_multidiscrete.py  ppo_multidiscrete_mask.py
invalid_action_masking/: ppo_10x10.py  ppo_16x16.py  ppo_24x24.py  ppo_4x4.py  ppo_no_adj_10x10.py  ppo_no_adj_16x16.py  ppo_no_adj_24x24.py  ppo_no_adj_4x4.py  ppo_no_mask_10x10.py  ppo_no_mask_16x16.py  ppo_no_mask_24x24.py  ppo_no_mask_4x4.py
plots/: analysis.py  approx_kl.py  episode_reward.py
plots/charts_episode_reward/: all_df_cache.pkl  envs_cache.pkl  exp_names_cache.pkl
plots/charts_episode_reward/data/: MicrortsMining10x10F9-v0.pkl  MicrortsMining16x16F9-v0.pkl  MicrortsMining24x24F9-v0.pkl  MicrortsMining4x4F9-v0.pkl
plots/losses_approx_kl/: all_df_cache.pkl  envs_cache.pkl  exp_names_cache.pkl
plots/losses_approx_kl/data/: MicrortsMining10x10F9-v0.pkl  MicrortsMining16x16F9-v0.pkl  MicrortsMining24x24F9-v0.pkl  MicrortsMining4x4F9-v0.pkl
